chore: advances on related work

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -15,6 +15,29 @@
 	Title = {Video of Chuck Norris walking on water},
 	url = {http://www.youtube.com/nonexistentlink}
 }
+
+## Social Web Working Group
+
+@misc{celik_prodromou_le_hors_2014,
+  title     = {Social Web Working Group Chart},
+  url       = {https://www.w3.org/wiki/Socialwg},
+  journal   = {Socialwg - W3C Wiki},
+  publisher = {W3C},
+  author    = {Celik, Tantek and Prodromou, Evan and LeHors, Arnaud},
+  year      = {2014},
+  month     = {Jul}
+}} 
+
+# Social Web Protocols
+ @misc{guy_2017,
+  title     = {https://www.w3.org/TR/social-web-protocols/},
+  url       = {https://www.w3.org/TR/social-web-protocols/},
+  journal   = {Social Web Protocols},
+  publisher = {W3C},
+  year      = {2017},
+  month     = {Dec}
+} 
+
 ## DIDS
 
 #did-core
@@ -112,6 +135,17 @@
   publisher = {W3C},
   year      = {2017},
   month     = {May}
+} 
+
+# ActivityStreams Vocabulary
+
+ @misc{snell_prodromou_2017_2,
+  title   = {Activity vocabulary},
+  url     = {https://www.w3.org/TR/activitystreams-vocabulary/},
+  journal = {W3C},
+  author  = {Snell, James M and Prodromou, Evan},
+  year    = {2017},
+  month   = {Apr}
 } 
 
 # Interview with Gargon
