--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -50,6 +50,8 @@ TCP
 
 \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage{fancyvrb}
+
 
 % Adding a finite stretch on the page suppresses "Underfull \vbox (badness 10000)" warnings.
 \makeatletter
